troll-k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: troll
spec:
  type: LoadBalancer
  selector:
    app: troll
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
